@@ -40,7 +40,7 @@ jobs:
         sudo make install
     - name: Install assimulo
       run: |
-        git clone --depth 1 -b dev-pm-cy3_only https://github.com/modelon-community/Assimulo /tmp/Assimulo
+        git clone --depth 1 -b Assimulo-3.5.0 https://github.com/modelon-community/Assimulo /tmp/Assimulo
         cd /tmp/Assimulo
         python3 setup.py install --user --sundials-home=/usr --blas-home=/usr/lib/x86_64-linux-gnu/ --lapack-home=/usr/lib/x86_64-linux-gnu/ --superlu-home=/usr --extra-fortran-compile-flags="-fallow-argument-mismatch"
     - name: Install fmilib
