@@ -1,11 +1,13 @@
 --- CHANGELOG ---
+--- PyFMI-2.13.0 ---
+    * Upgraded to Cython3.
+
 --- PyFMI-2.12.0 ---
     * Removed utilities related to the obsolete FMUX model interface.
     * Removed no longer required dependency on lxml.
     * Unified result handling and allowed the master algorithm to use all available result handlers
     * Added new option "result_downsampling_factor" for simulation of CS-FMUs, including the Master algorithm. 
       Solution will only be stored every "result_downsampling_factor"-nth communication point.
-    * Upgraded to Cython3.
 
 --- PyFMI-2.11.0 ---
     * Refactored result handling for dynamic_diagnostics. It is now possible use dynamic_diagnostics with a custom result handler.
